Add standalone packaging script for tflite runtime.

--- a/tensorflow/contrib/lite/tools/make/Makefile
+++ b/tensorflow/contrib/lite/tools/make/Makefile
@@ -222,4 +222,7 @@ cleantarget:
 $(DEPDIR)/%.d: ;
 .PRECIOUS: $(DEPDIR)/%.d
 
+libdir:
+	@echo $(LIBDIR)
+
 -include $(patsubst %,$(DEPDIR)/%.d,$(basename $(ALL_SRCS)))
